# s3pusher

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  s3pusher.py
.github/workflows/: container.yml  test.yml
